--- a/parking_slot.html
+++ b/parking_slot.html
@@ -462,7 +462,7 @@
         </div>
         <nav class="nav-links">
             <a href="user_dashboard.html">Home</a>
-            <a href="#">Locations</a>
+            <a href="location.html">Locations</a>
             <a href="location_pricing.html">Pricing</a>
             <a href="#">Contact</a>
         </nav>
