--- a/my_profile.html
+++ b/my_profile.html
@@ -50,10 +50,9 @@
     <div class="sidebar">
         <h2>My Profile</h2>
         <ul>
-            <li>Name: John Doe</li>
-            <li>Email: johndoe@example.com</li>
-            <li>Phone: +1234567890</li>
-            <li>Vehicle No: ABC-1234</li>
+            <li>Name: Bhanu Sri</li>
+            <li>Email: bhanu@example.com</li>
+            <li>Phone: 8954410320</li>
         </ul>
     </div>
 </body>
