--- a/logout.html
+++ b/logout.html
@@ -52,7 +52,7 @@
     <script>
         function logout() {
             alert("You have been logged out successfully!");
-            window.location.href = "login.html"; // Redirect to login page
+            window.location.href = "index.html"; // Redirect to login page
         }
     </script>
 </body>
